# paleta

./: CMakeLists.txt  Messages.sh
data/: org.kde.paleta.appdata.xml  org.kde.paleta.desktop  project.desktop
po/ar/: paleta.po
po/ca/: paleta.po
po/ca@valencia/: paleta.po
po/cs/: paleta.po
po/de/: paleta.po
po/es/: paleta.po
po/eu/: paleta.po
po/fi/: paleta.po
po/fr/: paleta.po
po/ga/: paleta.po
po/gl/: paleta.po
po/he/: paleta.po
po/ia/: paleta.po
po/it/: paleta.po
po/ka/: paleta.po
po/ko/: paleta.po
po/lt/: paleta.po
po/lv/: paleta.po
po/nl/: clip.po  paleta.po
po/nn/: paleta.po
po/pl/: paleta.po
po/pt_BR/: paleta.po
po/sk/: paleta.po
po/sl/: paleta.po
po/sv/: paleta.po
po/tr/: paleta.po
po/ug/: paleta.po
po/uk/: paleta.po
po/zh_CN/: paleta.po
po/zh_TW/: paleta.po
src/: CMakeLists.txt
src/assets/: assets.qrc
src/code/: colorutils.cpp  colorutils.h  main.cpp
src/controls/: ColorButton.qml  ImagePage.qml  main.qml  qml.qrc
